# quickevent

./: .clang-tidy  .gitignore  CMakeLists.txt
.github/actions/appimage/: action.yml
.github/actions/cmake/: action.yml
.github/actions/run-linter/: action.yml
.github/workflows/: appimage.yml  installer.yml  lint.yml
debian/: libqf-dev.install  libqf.install
libqf/libqfcore/: CMakeLists.txt
libqf/libqfcore/src/sql/: qxrecchng.h
libqf/libqfcore/src/utils/: table.cpp
libqf/libqfgui/: CMakeLists.txt  libqfgui-cs_CZ.ts  libqfgui-fr_FR.ts  libqfgui-nb_NO.ts  libqfgui-nl_BE.ts  libqfgui-pl_PL.ts  libqfgui-ru_RU.ts  libqfgui-sk_SK.ts  libqfgui-uk_UA.ts
libqf/libqfgui/src/: tableview.cpp
libqf/libqfgui/src/framework/: datadialogwidget.h  dialogwidget.cpp  dialogwidget.h  ipersistentsettings.cpp  ipersistentsettings.h
libqf/libqfgui/src/model/: sqldatadocument.h  sqltablemodel.cpp  sqltablemodel.h
libqf/libqfgui/src/reports/: reports.qrc
libqf/libqfgui/src/reports/widgets/: reportviewwidget.cpp
libqf/libqfgui/style/: dark.css
libquickevent/libquickeventcore/: CMakeLists.txt
libquickevent/libquickeventgui/: CMakeLists.txt
libquickevent/libquickeventgui/src/: reportoptionsdialog.h
libsiut/: CMakeLists.txt
quickevent/app/quickevent/: CMakeLists.txt  quickevent-es.ts
quickevent/app/quickevent/plugins/CardReader/src/: cardreaderwidget.cpp
quickevent/app/quickevent/plugins/Classes/src/: classeswidget.cpp
quickevent/app/quickevent/plugins/Competitors/src/: competitordocument.h
quickevent/app/quickevent/plugins/Event/src/: eventdialogwidget.cpp  eventdialogwidget.ui  eventplugin.cpp
quickevent/app/quickevent/plugins/Event/src/services/: serviceswidget.cpp  servicewidget.cpp  servicewidget.h  servicewidget.ui
quickevent/app/quickevent/plugins/Event/src/services/ofeed/: ofeedclient.cpp  ofeedclient.h  ofeedclientwidget.cpp  ofeedclientwidget.h  ofeedclientwidget.ui
quickevent/app/quickevent/plugins/Event/src/services/qx/: nodes.cpp  nodes.h  qxclientservice.cpp  qxclientservice.h  qxeventservice.cpp  qxeventservice.h  qxeventservicewidget.cpp  qxeventservicewidget.h  qxeventservicewidget.ui  qxlateregistrationswidget.cpp  qxlateregistrationswidget.h  qxnode.cpp  qxnode.h  runchangedialog.cpp  runchangedialog.h  sqlapi.cpp  sqlapi.h  sqlapinode.cpp  sqlapinode.h
quickevent/app/quickevent/plugins/Relays/src/: relaysplugin.cpp
quickevent/app/quickevent/plugins/Runs/src/: runsplugin.cpp  runstablemodel.cpp  runstablemodel.h  runstablewidget.cpp  runstablewidget.h  runswidget.cpp  runswidget.h
quickevent/app/quickevent/src/: main.cpp
quickevent/app/quickevent/src/qx/: sqlapi.cpp  sqlapi.h  sqldatadocument.cpp  sqldatadocument.h  sqltablemodel.cpp  sqltablemodel.h
quickhttpd/src/: main.cpp
quickshow/: CMakeLists.txt
quickshow/src/: main.cpp
tools/qsqlmon/: CMakeLists.txt  qsqlmon.iss
